131121 add authorize token for apis

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLSERVER2019;Database=DatingApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "TokenKey": "secret key unaccesable",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
