--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "ngx-bootstrap": "^7.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -26,7 +28,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
-    "@angular/cli": "^12.1.4",
+    "@angular/cli": "^12.2.13",
     "@angular/compiler-cli": "~12.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
